src/test/ui/const-generics/macro_rules-braces.min.stderr
error: expressions must be enclosed in braces to be used as const generic arguments
  --> $DIR/macro_rules-braces.rs:49:17
   |
LL |     let _: baz!(m::P);
   |                 ^^^^
   |
help: enclose the `const` expression in braces
   |
LL |     let _: baz!({ m::P });
   |                 ^      ^

error: expressions must be enclosed in braces to be used as const generic arguments
  --> $DIR/macro_rules-braces.rs:69:17
   |
LL |     let _: baz!(10 + 7);
   |                 ^^^^^^
   |
help: enclose the `const` expression in braces
   |
LL |     let _: baz!({ 10 + 7 });
   |                 ^        ^

error: generic parameters may not be used in const operations
  --> $DIR/macro_rules-braces.rs:37:20
   |
LL |     let _: foo!({{ N }});
   |                    ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`
   = help: use `#![feature(const_generics)]` and `#![feature(const_evaluatable_checked)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/macro_rules-braces.rs:41:19
   |
LL |     let _: bar!({ N });
   |                   ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`
   = help: use `#![feature(const_generics)]` and `#![feature(const_evaluatable_checked)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/macro_rules-braces.rs:46:20
   |
LL |     let _: baz!({{ N }});
   |                    ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`
   = help: use `#![feature(const_generics)]` and `#![feature(const_evaluatable_checked)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/macro_rules-braces.rs:51:19
   |
LL |     let _: biz!({ N });
   |                   ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`
   = help: use `#![feature(const_generics)]` and `#![feature(const_evaluatable_checked)]` to allow generic const expressions

error: aborting due to 6 previous errors

